--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -17,7 +17,14 @@
         "MIMode": "gdb",
         "preLaunchTask": "build",
         "miDebuggerPath": "/usr/bin/gdb",
-        "externalConsole": false
+        "externalConsole": false,
+        "setupCommands": [
+          {   // Display content in STL containers pretty
+              "description": "Enable pretty-printing for gdb",
+              "text": "-enable-pretty-printing",
+              "ignoreFailures": true
+          }
+      ],
       }
     ]
   }
